# GLin-private-DESKTOP

./: CMakeLists.txt  CMakeLists2.txt  CTestTestfile.cmake  FINAL_FIX_SUMMARY.md  README_test_paper_standard.md  SEGFAULT_FIX_SUMMARY.md  build.sh  dataGen.cpp  dataGen1.cpp  indexBuildAndFindByMe.cpp  run_paper_test.sh  test_program.cpp  tmp.cpp  tmp1.cpp  会话总结与修复清单.md  实验结果稳定性问题修复说明.md  性能问题分析与最终解决方案.md  性能问题根因分析与修复方案.md  最终修复方案总结.md  策略配置问题分析与修复.md  脚本使用说明.md
build1/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  my_glin_test  test_glin
docs/: beginner_friendly_explanation.md  detailed_technical_explanation.md  geospatial_best_practices.md  paper_analysis.md  query_explanation.md  segfault_analysis_and_fix.md  test_glin_paper_standard_final.md  test_glin_paper_standard_usage.md
glin/: bloom_filter.h  glin.h  hierarchical_mbr.h  index_num_nodes.h  index_size.h  piecewise.h
src/benchmark/: main.cpp
src/core/: alex.h  alex_nodes.h  projection.h
test/: grid_precision_calculator.cpp  test_basic_functionality.cpp  test_complete_performance.cpp  test_glin_hf.cpp  test_glin_hf_optimized.cpp  test_glin_insert_delete.cpp  test_glin_insert_delete_fixed.cpp  test_glin_paper_standard.cpp  test_memory_debug.cpp  test_minimal_memory.cpp  test_optimized_large.cpp  test_real_data_optimized.cpp  test_scalable_areawater.cpp  test_simple_delete.cpp  test_simple_insert.cpp  unittest_alex.h  unittest_alex_map.h  unittest_alex_multimap.h  unittest_geos.h  unittest_glin.h  unittest_glin_insert.h  unittest_main.cpp  unittest_nodes.h
